unbreak KRII, need to update its statistics